# rust-agent

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
kubernetes/: agent-deployment.yaml  deployment.yaml  permissions.yaml  secrets.yaml
src/: agent.rs  environment.rs  kube_agent.rs  main.rs  server.rs
src/agent/: mod.rs
src/agent/tools/: mod.rs  web_search.rs
src/kube/: error.rs  mod.rs
src/kube/tools/: metrics.rs  mod.rs  namespaces.rs  pods.rs
src/kube/types/: metrics.rs  mod.rs  namespaces.rs  pod.rs
src/server/: mod.rs  types.rs
